# feeder

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  models  notes.txt  requirements.docker.txt  requirements.txt  tasks.md  todo.md
.cargo/: config.toml
analyzer/: Cargo.toml
analyzer/src/: amplify.rs  analyzer.rs  content_kind.rs  lib.rs  main.rs  rate.rs  smooth.rs
audio-importer/: Cargo.toml
audiovis/: audiovis.js  index.html
backend/: Cargo.toml  Rocket.toml  build.rs  jsconfig.json
backend/.cargo/: config.toml
backend/src/: main.rs
backend/src/api/: metadata_response.rs  mod.rs
backend/src/api/events/: mod.rs
backend/src/api/segment/: analyse.rs  delete.rs  metadata.rs  mod.rs  update.rs
backend/src/api/segments/: delete.rs  kind.rs  mod.rs  query_options.rs  reasses.rs  search.rs  upload.rs
backend/src/fairings/: mod.rs
backend/src/fairings/analyser/: mod.rs
backend/src/fairings/check_db/: mod.rs
backend/src/fairings/check_emysound/: mod.rs
backend/src/fairings/classification/: classifier.rs  mod.rs  score.rs
backend/src/fairings/fetcher/: mod.rs  watcher.rs  worker.rs
backend/src/fairings/playback/: mod.rs
backend/src/frontend/: mod.rs
backend/src/internal/: analyse.rs  analyze.rs  codec.rs  content_kind_guesser.rs  documents.rs  download.rs  emysound.rs  mod.rs  optional.rs  prediction.rs  storage.rs  tera.rs
backend/src/internal/classification/: classify.rs  mod.rs  score.rs
backend/src/internal/emysound/: matcher.rs  mod.rs
backend/src/internal/guess/: iheartradio.rs  mod.rs
backend/src/internal/tags/: extract.rs  iheartradio.rs  mod.rs
backend/src/routes/api/: mod.rs
backend/src/routes/api/events/: mod.rs
backend/src/routes/api/playbacks/: get.rs  mod.rs  updates.rs
backend/src/routes/api/segment/: analyse.rs  audio.rs  delete.rs  metadata.rs  metadata_response.rs  mod.rs  update.rs
backend/src/routes/api/segments/: delete.rs  metadata.rs  mod.rs  reasses.rs  search.rs  upload.rs
backend/src/routes/api/streams/: data.rs  delete.rs  fetch.rs  get.rs  mod.rs
backend/src/routes/root/: analyse.rs  index.rs  mod.rs  search.rs  streams.rs  view.rs
backend/src/storage/: collection.rs  mod.rs  scheme.rs
backend/src/storage/playback/: mod.rs
backend/src/storage/streams/: collection.rs  document.rs  mod.rs
backend/static/: classification_diagram.js  index.html  player.js  script.js  search.js  streams.js  style.css  svg.min.js:Zone.Identifier
backend/templates/: analyse.html.tera  index.html.tera  paged_table.html.tera  search.html.tera  segments-table.html.tera  streams.html.tera  view.html.tera
classificator/: Cargo.toml
classificator/src/: classificator.rs  config.rs  data.rs  decode.rs  lib.rs  mfcc.rs  prediction.rs  score.rs  stat.rs  util.rs
classificator/src/networks/: cnn_ms.rs  cnn_projectpro.rs  fast_resnet.rs  mod.rs  network.rs
classifier/: Cargo.toml  model
classifier/examples/: train.rs  verify.rs
classifier/src/: lib.rs  pyvtable.rs  source.py  tfmodel.rs  types.rs
codec/: Cargo.toml
codec/examples/: crossfade.rs  resample.rs  transcode.rs
codec/src/: codec_params.rs  crossfade.rs  decoder.rs  demuxer.rs  encoder.rs  frame_ext.rs  lib.rs  pts.rs  resampler.rs  sample_format.rs
codec/src/dsp/: cross_fader.rs  crossfade.rs  mixer.rs  mod.rs
emysound/: Cargo.toml
emysound/examples/: emysound.rs
emysound/src/: lib.rs  model.rs
fetcher/: Cargo.toml
fetcher/src/: main.rs  utils.rs
fetcher/src/app/: args.rs  mod.rs  segment.rs  upload.rs
fetcher/src/app/fetchers/: httplivestream.rs  mod.rs  segment_info.rs
fetcher/src/app/processors/: download.rs  mod.rs  tag_extractor.rs
ffmpeg/: .gitattributes
frontend/: Cargo.toml
hls-fetcher/: Cargo.toml
hls-fetcher/examples/: hls.rs
hls-fetcher/src/: downloader.rs  lib.rs  playlist.rs
importer/: Cargo.toml
importer/src/: main.rs
mfcc/: Cargo.toml
mfcc/src/: delta.rs  lib.rs  main.rs  util.rs
mfccs-image-generator/: Cargo.toml
mfccs-image-generator/src/: main.rs
model/: Cargo.toml
model/src/: lib.rs  segment.rs
mongodb2sqlite/: Cargo.toml
mongodb2sqlite/src/: main.rs  mongo.rs
ndarray-shuffle/: Cargo.toml
ndarray-shuffle/benches/: shuffle_bench.rs
ndarray-shuffle/examples/: shuffle.rs
ndarray-shuffle/src/: lib.rs  shuffle.rs  shuffle_inplace.rs
restreamer/: Cargo.toml  sample.aac
restreamer/assets/: index.html
restreamer/src/: accept_header.rs  ad_cache.rs  ad_provider.rs  ads_management.rs  ads_planner.rs  ads_provider.rs  args.rs  main.rs  mixer.rs  play_params.rs  rate.rs  route_play.rs  routes.rs  state.rs  stream_saver.rs  terminate.rs
restreamer/src/adbuffet/: entry.rs  events.rs  iter.rs  listener.rs  mod.rs
restreamer/src/ads_management/: ad_cache.rs  ad_id.rs  ads_planner.rs  ads_provider.rs
restreamer/src/mixer/: ad.rs  ads.rs  passthrough.rs  silence.rs
restreamer/src/routes/: management.rs  play.rs  vast.rs
restreamer/src/routes/play/: cross_fader.rs  mixer.rs  play_params.rs  recorder.rs
restreamer/src/routes/play/mixer/: ads.rs  ads_provider.rs  passthrough.rs  silence.rs
restreamer/src/routes/vast/: collection.rs  root.rs  state.rs
restreamer/templates/: playbacks.html  tracks.html
restreamer/vast/: one.xml
server/: Cargo.toml
tag_analyser/: Cargo.toml
tag_analyser/src/: analyser.rs  lib.rs
tag_analyser/src/analysers/: adcontext.rs  mod.rs  regular_track.rs  spotblock.rs  ttwn.rs
tag_analyser/src/analysers/ihr/: iheartradio.rs  ihrpromo.rs  mod.rs  model.rs  split.rs  test_data.rs
tags/: Cargo.toml
tools/: Cargo.toml  mfccs.sh  train.sh
trainer/: Cargo.toml
trainer/src/: lib.rs  main.rs
trainer/src/network/: fast_resnet.rs  mod.rs
trainer/src/networks/: cnn_ms.rs  cnn_projectpro.rs  network.rs
trainer/src/utils/: data.rs  indices.rs  mod.rs  stat.rs
training/: Cargo.toml
training/src/: database.rs  entities.rs  lib.rs  model.rs
training/src/database/: dataset.rs  file_score.rs  model_runs.rs  models.rs
unstreamer/: Cargo.toml
unstreamer/src/: hls.rs  lib.rs
yamnet/: .gitignore  args.py  config.py  configurations.py  (+9 more)
(+4 files in other folders)
