[workspace]
resolver = "2"
members = [
    "analyzer",
    "classifier",
    "codec",
    "restreamer",
    "training",
    "unstreamer",
]

[workspace.package]
authors = ["Andrey Khranovsky <andrey.khranovsky@gmail.com>"]
edition = "2021"

[workspace.dependencies]
ac-ffmpeg = "0.18.1"
anyhow = "1.0.75"
async-stream = "0.3.5"
axum = { version = "0.6.20", features = ["headers", "multipart"] }
bytemuck = "1.14.0"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.7", features = ["derive"] }
derive_builder = { version = "0.12.0", features = ["clippy"] }
enumflags2 = "0.7.8"
flume = { version = "0.11.0", default-features = false }
futures = { version = "0.3.29" }
hls_m3u8 = "0.4.1"
kdam = "0.5.0"
lazy_static = "1.4.0"
log = "0.4.20"
mime = "0.3.17"
minijinja = { version = "1.0.9", features = ["builtins", "speedups"] }
ndarray = { version = "0.15.6", features = ["serde"] }
ndarray-stats = "0.5.1"
nearly = "0.2.0"
numpy = "0.20.0"
os_pipe = "1.1.4"
rand = { version = "0.8.5", features = ["small_rng"] }
ringbuf = "0.3.3"
serde = { version = "1.0.192", features = ["derive"] }
sqlx = { version = "0.7.2", features = [
    "runtime-tokio-native-tls",
    "sqlite",
    "macros",
    "uuid",
    "chrono",
] }
stderrlog = "0.5.4"
tensorflow = { version = "0.21.0", features = ["ndarray"] }
tokio = { version = "1.33.0", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "signal",
] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["full"] }
ureq = { version = "2.8.0", features = ["json"] }
url = { version = "2.4.1", features = ["serde"] }
uuid = { version = "1.5.0", features = ["v4", "serde"] }
seahash = "4.1.0"
strum = { version = "0.25.0", features = ["strum_macros", "derive"] }
tar = "0.4.40"
yew = { version = "0.21.0", features = ["csr"] }

analyzer = { version = "*", path = "./analyzer" }
classifier = { version = "*", path = "./classifier" }
codec = { version = "*", path = "./codec" }
restreamer = { version = "*", path = "./restreamer" }
unstreamer = { version = "*", path = "./unstreamer" }
