[package]
name = "analyzer"
version = "0.8.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ac-ffmpeg = { workspace = true }
anyhow = { workspace = true }
bytemuck = { workspace = true }
classifier = { workspace = true }
codec = { workspace = true }
kdam = { workspace = true }
log  ={ workspace = true }
mfcc = { workspace = true }
ndarray = { workspace = true }
ndarray-stats = { workspace = true }
stderrlog = { workspace = true }
unstreamer = { workspace = true }
url = { workspace = true }
