[package]
name = "analyzer"
version = "0.11.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ac-ffmpeg = { workspace = true }
anyhow = { workspace = true }
bytemuck = { workspace = true }
classifier = { workspace = true }
codec = { workspace = true }
enumflags2 = { workspace = true }
flume = { workspace = true }
kdam = { workspace = true }
log = { workspace = true }
ndarray = { workspace = true }
ndarray-stats = { workspace = true }
ringbuf = { workspace = true }
stderrlog = { workspace = true }
unstreamer = { workspace = true }
url = { workspace = true }
