[package]
name = "backend"
version = "0.4.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
async-stream = "0.3.3"
# TODO is it used?
chrono = { version = "0.4.23", features = ["serde"] }
flume = "0.10.14"
futures = "0.3.25"
hls_m3u8 = "0.4.1"
itertools = "0.10.5"
lazy_static = "1.4.0"
log = "0.4.17"
mongodb = { version = "2.3.1", features = [
    "bson-uuid-0_8",
    "bson-chrono-0_4",
] }
# TODO - hide dependency in `trainer` lib.
ndarray = "0.15.6"
regex = "1.7.0"
serde = { version = "1.0.150", features = ["derive"] }
serde_with = "2.1.0"
# TODO - hide dependency in `trainer` lib.
tch = { workspace = true }
time = { version = "0.3.17", features = ["formatting"] }
tokio = { version = "1.23.0", features = ["macros", "rt"] }
tokio-stream = "0.1.11"
ureq = "2.5.0"
url = { version = "2.3.1", features = ["serde"] }
uuid = { version = "1.2.2", features = ["v4"] }

[dependencies.emysound]
version = "*"
path = "../emysound"

[dependencies.hls-fetcher]
version = "*"
path = "../hls-fetcher"

[dependencies.mfcc]
version = "*"
path = "../mfcc"

[dependencies.model]
version = "*"
path = "../model"

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket"
features = ["msgpack", "uuid", "json"]

[dependencies.rocket_db_pools]
git = "https://github.com/SergioBenitez/Rocket"
features = ["mongodb"]

[dependencies.rocket_dyn_templates]
git = "https://github.com/SergioBenitez/Rocket"
features = ["tera"]

[dependencies.tag_analyser]
version = "*"
path = "../tag_analyser"

[dependencies.tags]
version = "*"
path = "../tags"

[dependencies.trainer]
version = "*"
path = "../trainer"
