[package]
name = "classifier"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
lazy_static = { workspace = true }
ndarray = { workspace = true }
ndarray-shuffle = { version = "*", path = "../ndarray-shuffle" }
ndarray-stats = { workspace = true }
numpy = { workspace = true }
pyo3 = { workspace = true }
rand = { version = "0.8.5", features = ["small_rng"] }
serde = { workspace = true }
serde-pickle = { workspace = true }
