[package]
name = "codec"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ac-ffmpeg = { workspace = true }
anyhow = { workspace = true }
bytemuck = { workspace = true }
derive_builder = { version = "0.12.0", features = ["clippy"] }
