[package]
name = "codec"
version = "0.7.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ac-ffmpeg = { workspace = true }
anyhow = { workspace = true }
bytemuck = { workspace = true }
derive_builder = { workspace = true }
log = { workspace = true }
