[package]
authors = { workspace = true }
edition = { workspace = true }
name = "codec"
version = "0.8.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ac-ffmpeg = { workspace = true }
anyhow = { workspace = true }
bytemuck = { workspace = true }
derive_builder = { workspace = true }
log = { workspace = true }
nearly = { workspace = true }
