[package]
name = "emysound"
version = "0.5.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
log = "0.4.17"
mime = "0.3.16"
multipart = { version = "0.18.0", default-features = false, features = ["client"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
ureq = { version = "2.5.0", default-features = false, features = ["json"] }
url = "2.3.1"
uuid = { version = "1.1.2", features = ["v4"] }

[dev-dependencies]
clap = { version = "3.2.22", features = ["derive"] }
