[package]
name = "emysound"
version = "0.5.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
mime = { workspace = true }
multipart = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ureq = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
clap = { workspace = true }
