[package]
name = "fetcher"
version = "0.2.0"
edition = "2021"
description = "Fetch audio data from the remote source"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.57", features = ["backtrace"] }
async-stream = "0.3.3"
async-trait = "0.1.53"
bytes = "1.1.0"
chrono = "0.4.19"
clap = { version = "3.1.18", features = ["derive"] }
hls_m3u8 = { version = "0.4.1", features = ["chrono"] }
lazy_static = "1.4.0"
lofty = "0.6.3"
log = "0.4.17"
regex = "1.5.6"
reqwest = "0.11.10"
simplelog = "0.12.0"
tokio = { version = "1.18.2", features = ["full"] }
tokio-stream = "0.1.8"
uuid = { version = "1.1.0", features = ["v4"] }
model = { version = "*", path = "../model" }
