[package]
name = "hls-fetcher"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
hls_m3u8 = { workspace = true }
tokio = { workspace = true }
ureq = { workspace = true }
