[package]
name = "mfcc"
version = "0.2.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
aubio = { workspace = true }
bytemuck = { workspace = true }
clap = { workspace = true }
codec = { workspace = true }
futures = { workspace = true, optional = true }
kdam = { workspace = true }
ndarray = { workspace = true }
rayon = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde-pickle = { workspace = true }
tokio = { workspace = true, optional = true }

[features]
async = ["dep:futures", "dep:tokio"]
parallel = []
default = ["parallel"]
