[package]
name = "mfcc"
version = "0.5.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
aubio = { workspace = true }
bincode = { workspace = true }
bytemuck = { workspace = true }
codec = { workspace = true }
itertools = { workspace = true }
kdam = { workspace = true }
rayon = { workspace = true }
rusqlite = { version = "0.29.0", features = [
    "bundled",
    "blob",
    "i128_blob",
    "time",
] }
serde = { workspace = true }
