[package]
name = "mfccs-image-generator"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.61"
bincode = "1.3.3"
bytes = "1.2.1"
ndarray = { version = "0.15.6", features = ["serde"] }
rayon = "1.5.3"
reqwest = { version = "0.11.11", features = ["blocking"] }
rmp-serde = "1.1.0"

[dependencies.mfcc]
version = "*"
path = "../mfcc"

[dependencies.model]
version = "*"
path = "../model"
