[package]
name = "mfccs-image-generator"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
bincode = "1.3.3"
ndarray = { version = "0.15.6", features = ["serde"] }
rayon = "1.5.3"
rmp-serde = "1.1.0"
ureq = { version = "2.5.0", default-features = false }
url = "2.3.1"

[dependencies.mfcc]
version = "*"
path = "../mfcc"

[dependencies.model]
version = "*"
path = "../model"
