[package]
name = "model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1.1.0", features = ["serde"] }
serde = { version = "1.0.137", features = ["derive"] }
url = { version = "2.2.2", features = ["serde"] }
