[package]
name = "model"
version = "0.3.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bson = "2.4.0"
serde = { version = "1.0.150", features = ["derive"] }
uuid = { version = "1.2.2", features = ["v4", "serde"] }

[dependencies.tags]
version = "*"
path = "../tags"
