[package]
name = "model"
version = "0.3.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
bson = { workspace = true }
serde = { workspace = true }
tags = { workspace = true }
uuid = { workspace = true }

