[package]
name = "mongodb2sqlite"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
futures = { workspace = true }
humansize = { workspace = true }
kdam = { workspace = true }
mongodb ={ workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
ulid = { workspace = true }
