[package]
name = "restreamer"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
analyzer = { workspace = true }
anyhow = { workspace = true }
async-stream = { workspace = true }
axum = { version = "0.6.2" }
codec = { workspace = true }
futures = { workspace = true }
mfcc = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
unstreamer = { workspace = true }
url = { workspace = true }
