[package]
name = "restreamer"
version = "0.2.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
analyzer = { workspace = true }
anyhow = { workspace = true }
async-stream = { workspace = true }
axum = { workspace = true }
codec = { workspace = true }
futures = { workspace = true }
mfcc = { workspace = true }
os_pipe = { workspace = true }
serde = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
unstreamer = { workspace = true }
url = { workspace = true }

[dev-dependencies]
ac-ffmpeg = { workspace = true }
bytemuck = { workspace = true }
