[package]
authors = { workspace = true }
edition = { workspace = true }
name = "restreamer"
version = "0.10.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
analyzer = { workspace = true }
anyhow = { workspace = true }
async-stream = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
codec = { workspace = true }
enumflags2 = { workspace = true }
flume = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
mime = { workspace = true }
nearly = { workspace = true }
os_pipe = { workspace = true }
ringbuf = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
stderrlog = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
unstreamer = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
ac-ffmpeg = { workspace = true }
bytemuck = { workspace = true }
