[package]
name = "tag_analyser"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
itertools = "0.10.4"
lazy_static = "1.4.0"
log = "0.4.17"
model = { version = "0.3.0", path = "../model" }
regex = "1.6.0"
tags = { version = "0.2.0", path = "../tags" }
uuid = { version = "1.1.2", features = ["v4"] }
