[package]
name = "tag_analyser"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
model = { workspace = true }
regex = { workspace = true }
tags = { workspace = true }
uuid = { workspace = true }
