[package]
name = "tools"
version = "0.4.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
bytemuck = { workspace = true }
clap = { workspace = true }
classifier = { workspace = true }
codec = { workspace = true }
itertools = { workspace = true }
kdam = { workspace = true }
ndarray = { workspace = true }
ndarray-shuffle = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
rusqlite = { version = "0.29.0", features = [
    "bundled",
    "blob",
    "i128_blob",
    "time",
] }
ulid = { workspace = true }

mfcc = { path = "../mfcc" }
