[package]
name = "tools"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
flume = { workspace = true }
seahash = "4.1.0"
tar = "0.4.40"
tokio = { workspace = true }
