[package]
name = "tools"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
bytemuck = { workspace = true }
clap = { workspace = true }
classifier = { workspace = true }
codec = { workspace = true }
flume = { workspace = true }
kdam = { workspace = true }
seahash = "4.1.0"
sqlx = { workspace = true }
strum = { version = "0.25.0", features = ["strum_macros", "derive"] }
tar = "0.4.40"
tokio = { workspace = true }
