[package]
name = "trainer"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.61"
bincode = "1.3.3"
bytes = "1.2.1"
clap = { version = "3.2.17", features = ["derive"] }
kdam = "0.2.2"
ndarray = { version = "0.15.6", features = ["rayon", "serde"] }
num_cpus = "1.13.1"
rand = "0.8.5"
rayon = "1.5.3"
tch = "0.8.0"

[dependencies.mfcc]
version = "*"
path = "../mfcc"

[dependencies.model]
version = "*"
path = "../model"
