[package]
name = "trainer"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bincode = "1.3.3"
clap = { version = "4.0", features = ["derive"] }
colorgrad = { version = "0.6.2", default-features = false, optional = true }
flate2 = "1.0.25"
kdam = "0.3.0"
ndarray = { version = "0.15.6", features = ["rayon", "serde"] }
num_cpus = "1.14.0"
plotters = { version = "0.3.4", default-features = false, features = ["svg_backend"], optional = true }
rand = "0.8.5"
rayon = "1.6.1"
tch = { workspace = true }

[features]
plot = ["dep:colorgrad", "dep:plotters"]
default = []

[dependencies.mfcc]
version = "*"
path = "../mfcc"

[dependencies.model]
version = "*"
path = "../model"
