[package]
name = "training"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
bytemuck = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
classifier = { workspace = true }
codec = { workspace = true }
flume = { workspace = true }
kdam = { workspace = true }
seahash = { workspace = true }
sqlx = { workspace = true }
strum = { workspace = true }
tar = { workspace = true }
tokio = { workspace = true }
