[package]
authors = { workspace = true }
edition = { workspace = true }
name = "unstreamer"
version = "0.2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
flume = { workspace = true }
hls_m3u8 = { workspace = true }
log = { workspace = true }
ureq = { workspace = true }
url = { workspace = true }
